sources/CPP/include/Ers/ErsApiFunctions.h

// Temporary typedef until we found a good place for shared information.
typedef uint64_t EntityID;
 typedef uint64_t SimulationTime;
    ERS_IMPORT void ERS_Logger_AddCallback(void(*logCallback)(int level, const char* message, void* callbackData), void* callbackData);
    ERS_IMPORT void ERS_ModelContainer_SetModelPrecision(void* modelContainerInstance, uint64_t newPrecision);
    ERS_IMPORT uint64_t ERS_ModelContainer_GetModelPrecision(void* modelContainerInstance);
    ERS_IMPORT bool ERS_ModelContainer_IsStarted(const void* modelContainerInstance);
    ERS_IMPORT void ERS_ModelContainer_SetSeed(void* modelContainerInstance, size_t seed);
    ERS_IMPORT void ERS_ModelContainer_GenerateRandomSeed(void* modelContainerInstance);
    ERS_IMPORT size_t ERS_ModelContainer_Seed(void* modelContainerInstance);
    ERS_IMPORT void* ERS_ModelContainer_FindSimulatorById(void* modelContainerInstance, const int32_t id);
    ERS_IMPORT void* ERS_ModelContainer_FindSimulatorByTag(void* modelContainerInstance, const char* tag);
    ERS_IMPORT void ERS_ModelContainer_AddSimulatorDependency(void* modelContainerInstance, void* fromSharedPtr, void* toSimulatorSharedPtr);
    ERS_IMPORT void ERS_ModelContainer_RemoveSimulatorDependency(void* modelContainerInstance, void* fromSimulatorSharedPtr, void* toSimulatorSharedPtr);
    ERS_IMPORT void ERS_ModelContainer_Start(void* modelContainerInstance);
    ERS_IMPORT const char* ERS_ModelContainer_GetWorkingDir(void* modelContainerInstance);
    ERS_IMPORT void ERS_ModelContainer_SetWorkingDir(void* modelContainerInstance, const char* path);
    ERS_IMPORT void* ERS_ModelManager_GetModelManager();
    ERS_IMPORT void ERS_ModelManager_AddModelContainer(void* modelManager, void* modelContainer, uint64_t releaseTime);
    ERS_IMPORT void ERS_ModelManager_RemoveModelContainer(void* modelManager, void* modelContainer);
    ERS_IMPORT size_t ERS_ModelManager_CountModelContainers(const void* modelManager);
    ERS_IMPORT void* ERS_ModelManager_GetModelContainerAt(void* modelManager, const size_t index);
    ERS_IMPORT bool ERS_ModelManager_HasModelContainer(const void* modelManager, const void* modelContainer);
    ERS_IMPORT void ERS_ModelManager_Update(void* updateManager);
    ERS_IMPORT bool ERS_LibraryCollection_OpenLibrary(void* instance, const char* libraryPath);
    ERS_IMPORT bool ERS_LibraryCollection_IsLibraryOpen(const void* instance, const char* libraryPath);
    ERS_IMPORT void* ERS_LibraryCollection_GetFunctionFromLibrary(const void* instance, const char* libraryPath, const char* functionName);
    ERS_IMPORT void* ERS_LibraryCollection_GetLibraryHandle(const void* instance, const char* libraryPath);
    ERS_IMPORT void* ERS_PersistentEvent_Create();
    ERS_IMPORT void ERS_PersistentEvent_Release(void* ptr);
    ERS_IMPORT bool ERS_PersistentEvent_IsEmpty(void* ptr);
    ERS_IMPORT void* ERS_PersistentEvent_GetSimulator(void* ptr);
    ERS_IMPORT void* ERS_PersistentEvent_GetSimEvent(void* ptr);
    ERS_IMPORT uint64_t ERS_SimEvent_Get_Time(void* ptr);
    ERS_IMPORT uint32_t ERS_SimEvent_Get_Priority(void* ptr);
    ERS_IMPORT bool ERS_SimEvent_IsSyncEvent(void* ptr);
    ERS_IMPORT void* ERS_Simulator_GetLibraryCollection(void* instance);
    ERS_IMPORT void* ERS_Simulator_GetSubModel(void* instance);
    ERS_IMPORT bool ERS_Simulator_IsRunTogether(void* instance, int32_t otherSimulatorId);
    ERS_IMPORT bool ERS_Simulator_IsBiDirectional(void* instance, int32_t otherSimulatorId);
    ERS_IMPORT char* ERS_Simulator_GetName(const void* instance);
    ERS_IMPORT uint64_t ERS_Simulator_GetTimeStep(const void* instance);
    ERS_IMPORT void ERS_Simulator_SetTimeStep(void* instance, uint64_t newTimeStep);
    ERS_IMPORT int32_t ERS_Simulator_GetID(const void* instance);
    ERS_IMPORT uint8_t ERS_Simulator_GetSimulatorType(const void* instance);
    ERS_IMPORT void* ERS_Simulator_GetAttachedModelContainer(void* instance);
    ERS_IMPORT size_t ERS_Simulator_GetDependenciesAmount(const void* instance);
    ERS_IMPORT char* ERS_Simulator_GetDependencyName(const void* instance, size_t index);
    ERS_IMPORT void* ERS_Simulator_FindDependencyById(void* instance, int32_t simulatorId);
    ERS_IMPORT void* ERS_Simulator_FindDependencyByName(void* instance, const char* nameTag, int nameSize);
    ERS_IMPORT void* ERS_Simulator_FindOutgoingDependencyById(void* instance, int32_t id);
    ERS_IMPORT void* ERS_Simulator_FindOutgoingDependencyByName(void* instance, const char* nameTag, int nameSize);
    ERS_IMPORT SimulationTime ERS_Simulator_GetCurrentTime(const void* simulatorInstance);
    ERS_IMPORT uint32_t ERS_BoxComponent_TypeId();
    ERS_IMPORT float ERS_BoxComponent_Get_Min_X(void* instance);
    ERS_IMPORT float ERS_BoxComponent_Get_Min_Y(void* instance);
    ERS_IMPORT float ERS_BoxComponent_Get_Min_Z(void* instance);
    ERS_IMPORT float ERS_BoxComponent_Get_Max_X(void* instance);
    ERS_IMPORT float ERS_BoxComponent_Get_Max_Y(void* instance);
    ERS_IMPORT float ERS_BoxComponent_Get_Max_Z(void* instance);
    ERS_IMPORT void ERS_BoxComponent_Set_Min(void* instance, float minX, float minY, float minZ);
    ERS_IMPORT void ERS_BoxComponent_Set_Max(void* instance, float maxX, float maxY, float maxZ);
    ERS_IMPORT float ERS_BoxComponent_Get_Dimensions_X(void* instance);
    ERS_IMPORT float ERS_BoxComponent_Get_Dimensions_Y(void* instance);
    ERS_IMPORT float ERS_BoxComponent_Get_Dimensions_Z(void* instance);
    ERS_IMPORT void ERS_BoxComponent_Set_Dimensions(void* instance, float dimsX, float dimsY, float dimsZ);
    ERS_IMPORT bool ERS_BoxComponent_InCollision_Point2D(void* instance, float pointX, float pointY);
    ERS_IMPORT uint32_t ERS_GlobalComponentRegistry_RegisterScriptBehavior(const char* name, void*(*CreateInstance)(void* handle), void* handle, void(*OnCreation)(void* scriptBehaviorInstance), void(*OnAwake)(void* scriptBehaviorInstance), void(*OnStart)(void* scriptBehaviorInstance), void(*OnUpdate)(void* scriptBehaviorInstance), void(*OnLateUpdate)(void* scriptBehaviorInstance), void(*OnDestroy)(void* scriptBehaviorInstance), void(*OnEntering)(void* scriptBehaviorInstance, EntityID child), void(*OnEntered)(void* scriptBehaviorInstance, EntityID child), void(*OnExiting)(void* scriptBehaviorInstance, EntityID child), void(*OnExited)(void* scriptBehaviorInstance, EntityID child), void(*OnInputChannelReady)(void* scriptBehaviorInstance, EntityID inputChannel), void(*OnOutputChannelReady)(void* scriptBehaviorInstance, EntityID outputChannel), void(*OnReceive)(void* scriptBehaviorInstance, EntityID inputChannel, EntityID child), void(*Serialization)(void* scriptBehaviorInstance, void* serializer), void(*OnSubModelMove)(void* scriptBehaviorInstance, EntityID newConnectedEntity));
    ERS_IMPORT void* ERS_EventScheduler_RegisterLocalEventType(uint64_t typeIdentifier, void(*callback)(void* data), void(*destructor)(void* data), void(*serialize)(void* data, void* serializerHandle), void*(*allocator)(), const char* uniqueName, const char* sourceLibrary, size_t size, const char* filePath, int lineNumber);
    ERS_IMPORT void* ERS_EventScheduler_RegisterSyncEventType(uint64_t eventTypeIdentifier, void(*onSenderSideCallback)(), void(*onTargetSideCallback)(), void(*serializeData)(void* dataContext, void* serializerHandle), uint32_t dataBlockSize, const char* name, const char* sourceLibrary, const char* filePath, int lineNumber);
    ERS_IMPORT void ERS_SubModel_AddSubModelContext(void* subModelHandle, uint32_t SubModelContextTypeIdx, const char* name, void* SubModelContextPtr, void(*destructor)(void* contextHandle));