sources/CSharp/src/ErsApiFunctions.cs


        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelContainer_SetModelPrecision(IntPtr modelContainerInstance, UInt64 newPrecision);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 ERS_ModelContainer_GetModelPrecision(IntPtr modelContainerInstance);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_ModelContainer_IsStarted(IntPtr modelContainerInstance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelContainer_SetSeed(IntPtr modelContainerInstance, nuint seed);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelContainer_GenerateRandomSeed(IntPtr modelContainerInstance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint ERS_ModelContainer_Seed(IntPtr modelContainerInstance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_ModelContainer_FindSimulatorById(IntPtr modelContainerInstance, Int32 id);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe IntPtr ERS_ModelContainer_FindSimulatorByTag(IntPtr modelContainerInstance, /* ASCII String */ byte* tag);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelContainer_AddSimulatorDependency(IntPtr modelContainerInstance, IntPtr fromSharedPtr, IntPtr toSimulatorSharedPtr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelContainer_RemoveSimulatorDependency(IntPtr modelContainerInstance, IntPtr fromSimulatorSharedPtr, IntPtr toSimulatorSharedPtr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelContainer_Start(IntPtr modelContainerInstance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_ModelContainer_GetWorkingDir(IntPtr modelContainerInstance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_ModelContainer_SetWorkingDir(IntPtr modelContainerInstance, /* ASCII String */ byte* path);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_ModelManager_GetModelManager();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelManager_AddModelContainer(IntPtr modelManager, IntPtr modelContainer, UInt64 releaseTime);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelManager_RemoveModelContainer(IntPtr modelManager, IntPtr modelContainer);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint ERS_ModelManager_CountModelContainers(IntPtr modelManager);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_ModelManager_GetModelContainerAt(IntPtr modelManager, nuint index);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_ModelManager_HasModelContainer(IntPtr modelManager, IntPtr modelContainer);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelManager_Update(IntPtr updateManager);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe bool ERS_LibraryCollection_OpenLibrary(IntPtr instance, /* ASCII String */ byte* libraryPath);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe bool ERS_LibraryCollection_IsLibraryOpen(IntPtr instance, /* ASCII String */ byte* libraryPath);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe IntPtr ERS_LibraryCollection_GetFunctionFromLibrary(IntPtr instance, /* ASCII String */ byte* libraryPath, /* ASCII String */ byte* functionName);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe IntPtr ERS_LibraryCollection_GetLibraryHandle(IntPtr instance, /* ASCII String */ byte* libraryPath);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_PersistentEvent_Create();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_PersistentEvent_Release(IntPtr ptr);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_PersistentEvent_IsEmpty(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_PersistentEvent_GetSimulator(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_PersistentEvent_GetSimEvent(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 ERS_SimEvent_Get_Time(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 ERS_SimEvent_Get_Priority(IntPtr ptr);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_SimEvent_IsSyncEvent(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_Simulator_GetLibraryCollection(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_Simulator_GetSubModel(IntPtr instance);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_Simulator_IsRunTogether(IntPtr instance, Int32 otherSimulatorId);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_Simulator_IsBiDirectional(IntPtr instance, Int32 otherSimulatorId);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_Simulator_GetName(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 ERS_Simulator_GetTimeStep(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Simulator_SetTimeStep(IntPtr instance, UInt64 newTimeStep);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 ERS_Simulator_GetID(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern byte ERS_Simulator_GetSimulatorType(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_Simulator_GetAttachedModelContainer(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint ERS_Simulator_GetDependenciesAmount(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_Simulator_GetDependencyName(IntPtr instance, nuint index);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_Simulator_FindDependencyById(IntPtr instance, Int32 simulatorId);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe IntPtr ERS_Simulator_FindDependencyByName(IntPtr instance, /* ASCII String */ byte* nameTag, int nameSize);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_Simulator_FindOutgoingDependencyById(IntPtr instance, Int32 id);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe IntPtr ERS_Simulator_FindOutgoingDependencyByName(IntPtr instance, /* ASCII String */ byte* nameTag, int nameSize);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern SimulationTime ERS_Simulator_GetCurrentTime(IntPtr simulatorInstance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 ERS_BoxComponent_TypeId();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_BoxComponent_Get_Min_X(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_BoxComponent_Get_Min_Y(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_BoxComponent_Get_Min_Z(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_BoxComponent_Get_Max_X(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_BoxComponent_Get_Max_Y(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_BoxComponent_Get_Max_Z(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_BoxComponent_Set_Min(IntPtr instance, float minX, float minY, float minZ);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_BoxComponent_Set_Max(IntPtr instance, float maxX, float maxY, float maxZ);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_BoxComponent_Get_Dimensions_X(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_BoxComponent_Get_Dimensions_Y(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_BoxComponent_Get_Dimensions_Z(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_BoxComponent_Set_Dimensions(IntPtr instance, float dimsX, float dimsY, float dimsZ);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_BoxComponent_InCollision_Point2D(IntPtr instance, float pointX, float pointY);
